fixed meta tags and issues with h1 padding on mobile

--- a/main.css
+++ b/main.css
@@ -132,9 +132,6 @@ h2{
     h2{
         width:80%;
     }
-    h1{
-
-    }
     #samplifyresults-image{
         width: 40vw;
         padding-left: 15vw;
@@ -183,6 +180,12 @@ h2{
         padding: 2px 0 3px 0;
         margin: 0 20px 0 20px;
     }
+    h1{
+        padding-top: 0px;
+    }
+    h2{
+        padding-top: 10px;
+    }
 }
 
 #header {
@@ -203,6 +206,9 @@ h2{
 @media (max-width: 450px){
     #header{
         left: 800px;
+    }
+    h1{
+        margin-top: -10px;
     }
 }
 
